--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,10 @@
     <meta name="author" content="Alex Urueña">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="hoja_de_estilos.css" rel="stylesheet">
+    <link href="./css/hoja_de_estilos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
+
 <body>
     <header>
 
@@ -20,7 +22,7 @@
 
     <section>
         <article>
-
+         
         </article>
     </section>
     <aside>
@@ -28,8 +30,11 @@
     </aside>
 
     <footer>
-
-
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
+        </ul> 
     </footer>
 </body>
 
