--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
     <section>
         <article>
-         
+<p>jaja</p>
         </article>
     </section>
     <aside>
@@ -34,7 +34,7 @@
             <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
-        </ul> 
+        </ul>
     </footer>
 </body>
 
