--- a/index.html
+++ b/index.html
@@ -9,12 +9,48 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/hoja_de_estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header>
 
         <nav>
+            <div class="navbar">
+                <a href="#home">Home</a>
+                <div class="subnav">
+                    <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./art.html">Art</a>
+                        <a href="./literature.html">Literature</a>
+                        <a href="./photo.html">Photo</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="#bring">Bring</a>
+                        <a href="#deliver">Deliver</a>
+                        <a href="#package">Package</a>
+                        <a href="#express">Express</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./noelia.html">Noelia</a>
+                        <a href="./marta.html">Marta</a>
+                        <a href="#link3">X</a>
+                        <a href="#link4">Y</a>
+                    </div>
+                </div>
+                <a href="./contact.html">Contact</a>
+            </div>
+
+            <div style="padding:0 16px">
+                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
+                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+            </div>
 
         </nav>
     </header>
@@ -22,7 +58,7 @@
 
     <section>
         <article>
-         
+            <p>ajaj</p>
         </article>
     </section>
     <aside>
@@ -32,9 +68,10 @@
     <footer>
         <ul>
             <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
+                        class="fa-brands fa-whatsapp whatsapp"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
-        </ul> 
+        </ul>
     </footer>
 </body>
 
