--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/hoja_de_estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,7 +16,7 @@
 
         <nav>
             <div class="navbar">
-                <a href="#home">Home</a>
+                <a href="./index.html">Home</a>
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
@@ -66,6 +65,9 @@
     </aside>
 
     <footer>
+        <h3>Design and develop by: Alex Urueña</h3>
+        <br>
+
         <ul>
             <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
