--- a/marta.html
+++ b/marta.html
@@ -15,6 +15,40 @@
     <header>
 
         <nav>
+            <div class="navbar">
+                <a href="./index.html">Home</a>
+                <div class="subnav">
+                    <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./art.html">Art</a>
+                        <a href="./literature.html">Literature</a>
+                        <a href="./photo.html">Photo</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="#bring">Bring</a>
+                        <a href="#deliver">Deliver</a>
+                        <a href="#package">Package</a>
+                        <a href="#express">Express</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./noelia.html">Noelia</a>
+                        <a href="./marta.html">Marta</a>
+                        <a href="#link3">X</a>
+                        <a href="#link4">Y</a>
+                    </div>
+                </div>
+                <a href="./contact.html">Contact</a>
+            </div>
+
+            <div>
+
+            </div>
 
         </nav>
     </header>
@@ -22,7 +56,9 @@
 
     <section>
         <article>
-         
+            <p>One of our partners is Marta Francés Pintado</p>
+            <img src="./img/marta2.jpg" width="10%" height="50%" alt="Marta Francés Pintado" id="noeimg">
+
         </article>
     </section>
     <aside>
@@ -31,10 +67,10 @@
 
     <footer>
         <ul>
-            <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
-        </ul> 
+            <li><a href="https://www.instagram.com/martitouille/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=34638253819"><i class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/marta-franc%C3%A9s-pintado-128a2920b/"><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
     </footer>
 </body>
 
