--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <br>
 
         <ul>
-            <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/alexxball_/"><i class="fa-brands fa-instagram instagram"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
                         class="fa-brands fa-whatsapp whatsapp"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/alexurumart/"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
