--- a/noelia.html
+++ b/noelia.html
@@ -28,19 +28,16 @@
                 <div class="subnav">
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="#bring">Bring</a>
-                        <a href="#deliver">Deliver</a>
-                        <a href="#package">Package</a>
-                        <a href="#express">Express</a>
+                        <a href="./questions.html">Questions</a>
+                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
                     <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
+                        <a href="./me.html">Alex</a>
                         <a href="./noelia.html">Noelia</a>
                         <a href="./marta.html">Marta</a>
-                        <a href="#link3">X</a>
-                        <a href="#link4">Y</a>
                     </div>
                 </div>
                 <a href="./contact.html">Contact</a>
@@ -69,7 +66,8 @@
         <ul>
             <li><a href="https://www.instagram.com/_nuly__/"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=34622497016"><i class="fa-brands fa-whatsapp"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/noelia-otazo-rojo-09b421200"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/noelia-otazo-rojo-09b421200"><i
+                        class="fa-brands fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
