--- a/home.html
+++ b/home.html
@@ -10,10 +10,43 @@
     <link href="./css/hoja_de_estilos.css" rel="stylesheet">
     <img src="./img/fondo.jpg" id="fondo">
 </head>
+
 <body>
     <header>
 
         <nav>
+            <div class="navbar">
+                <a href="./index.html">Home</a>
+                <div class="subnav">
+                    <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./art.html">Art</a>
+                        <a href="./literature.html">Literature</a>
+                        <a href="./photo.html">Photo</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./questions.html">Questions</a>
+                        <a href="./deliver.html">Deliver</a>
+                    </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="./me.html">Alex</a>
+                        <a href="./noelia.html">Noelia</a>
+                        <a href="./marta.html">Marta</a>
+                    </div>
+                </div>
+                <a href="./contact.html">Contact</a>
+            </div>
+
+            <div style="padding:0 16px">
+                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
+                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+            </div>
 
         </nav>
     </header>
@@ -21,7 +54,7 @@
 
     <section>
         <article>
-
+            <p>ajaj</p>
         </article>
     </section>
     <aside>
@@ -29,8 +62,16 @@
     </aside>
 
     <footer>
+        <h3>Design and develop by: Alex Urueña</h3>
+        <br>
 
-
+        <ul>
+            <li><a href="https://www.instagram.com/alexxball_/"><i class="fa-brands fa-instagram instagram"></i></a>
+            </li>
+            <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
+                        class="fa-brands fa-whatsapp whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/alexurumart/"><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
     </footer>
 </body>
 
