--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section>
         <article>
-            <p>ajaj</p>
+            <p>INICIO</p>
         </article>
     </section>
     <aside>
