--- a/me.html
+++ b/me.html
@@ -43,9 +43,8 @@
                 <a href="./contact.html">Contact</a>
             </div>
 
-            <div style="padding:0 16px">
-                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+            <div>
+
             </div>
 
         </nav>
@@ -54,7 +53,8 @@
 
     <section>
         <article>
-            <p>ajaj</p>
+            <p>The creator of the page.</p>
+            <img src="./img/alex.jpg" width="10%" height="50%" alt="Alex Urueña" id="noeimg">
         </article>
     </section>
     <aside>
