--- a/questions.html
+++ b/questions.html
@@ -54,7 +54,7 @@
 
     <section>
         <article>
-            <p>ajaj</p>
+            <p>PREGUNTAS</p>
         </article>
     </section>
     <aside>
