--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/hoja_de_estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,7 +16,7 @@
 
         <nav>
             <div class="navbar">
-                <a href="#home">Home</a>
+                <a href="./index.html">Home</a>
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
@@ -29,19 +28,16 @@
                 <div class="subnav">
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="#bring">Bring</a>
-                        <a href="#deliver">Deliver</a>
-                        <a href="#package">Package</a>
-                        <a href="#express">Express</a>
+                        <a href="./questions.html">Questions</a>
+                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
                     <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
+                        <a href="./me.html">Alex</a>
                         <a href="./noelia.html">Noelia</a>
                         <a href="./marta.html">Marta</a>
-                        <a href="#link3">X</a>
-                        <a href="#link4">Y</a>
                     </div>
                 </div>
                 <a href="./contact.html">Contact</a>
@@ -58,7 +54,7 @@
 
     <section>
         <article>
-            <p>ajaj</p>
+            <p>CONTACTO</p>
         </article>
     </section>
     <aside>
@@ -66,11 +62,15 @@
     </aside>
 
     <footer>
+        <h3>Design and develop by: Alex Urueña</h3>
+        <br>
+
         <ul>
-            <li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/alexxball_/"><i class="fa-brands fa-instagram instagram"></i></a>
+            </li>
             <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
                         class="fa-brands fa-whatsapp whatsapp"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/alexurumart/"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
