--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Kai</title>
     <meta charset="UTF-8">
     <meta name="author" content="Alex Urueña">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
