--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div style="padding:0 16px">
                 <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+                <p>Here</p>
             </div>
 
         </nav>
