--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Contact</title>
     <meta charset="UTF-8">
     <meta name="author" content="Alex Urueña">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,8 +44,8 @@
             </div>
 
             <div style="padding:0 16px">
-                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+                <h3>Jaja nice</h3>
+                <p>Here</p>
             </div>
 
         </nav>
@@ -54,7 +54,46 @@
 
     <section>
         <article>
-            <p>CONTACTO</p>
+            <form>
+                <p>
+                    Enter your personal details:</p>
+                <br>
+                <input type="text" name="name" size="40" maxlength="35" placeholder="Name"><br>
+                <br>
+                <input type="text" name="last_name" size="70" maxlength="65" placeholder="Last name"><br>
+                <br>
+                NIF
+                <br><input type="password" name="nombre" size="15" maxlength="9"><br><br>
+
+                <label for="domain" style="margin-left:15% ;">Choose a domain:</label><br>
+                <input type="text" name="e-mail" size="30" maxlength="50" placeholder="E-mail:" title="Tu correo electrónico">
+                    <select id="domain" name="domain">
+                        <option value="hotmail.es">hotmail.es</option>
+                        <option value="hotmail.com">hotmail.com</option>
+                        <option value="yahoo">yahoo.es</option>
+                        <option value="gmail">gmail.com</option>
+                    </select>
+                                    
+                    <br><br>
+                <input type="checkbox" name="check" checked=""> Subscribe to the news<br>
+
+
+                <p>Select the type of ticket you want:</p>
+
+                <input type="radio" id="Normal" name="fav_language" value="Normal">
+                <label for="Normal">Normal</label><br>
+                <input type="radio" id="Normal_Camping" name="fav_language" value="Normal_Camping">
+                <label for="Normal_Camping">Normal + Camping</label><br>
+                <input type="radio" id="VIP" name="fav_language" value="VIP">
+                <label for="VIP">VIP</label><br>
+                <input type="radio" id="VIP_Camping" name="fav_language" value="VIP_Camping">
+                <label for="VIP_Camping">VIP + Camping</label><br><br>
+
+                Include your parents' authorisation if you are a minor:
+                <input type="file" name="examinar"><br><br>
+                <a href="multimedia/fotos/no.png" alt="Buy tickets"><button>Buy your tickets</button></a>
+                <input type="reset" name="reset" value="Delete entered data">
+            </form>
         </article>
     </section>
     <aside>
