--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                 <input type="radio" id="VIP_Camping" name="fav_language" value="VIP_Camping">
                 <label for="VIP_Camping">VIP + Camping</label><br><br>
 
-                Include your parents' authorisation if you are a minor:
+                Include your 
                 <input type="file" name="examinar"><br><br>
                 <a href="multimedia/fotos/no.png" alt="Buy tickets"><button>Buy your tickets</button></a>
                 <input type="reset" name="reset" value="Delete entered data">
