--- a/photo.html
+++ b/photo.html
@@ -54,7 +54,138 @@
 
     <section>
         <article>
-           
+            <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,700,800'
+                rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,300,200,100,900' rel='stylesheet'
+                type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+
+            <ul id="categories" class="clr">
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm3.staticflickr.com/2878/10944255073_973d2cd25c.jpg" alt="" />
+                        <h1>This is a title a bit longer</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm9.staticflickr.com/8461/8048823381_0fbc2d8efb.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm5.staticflickr.com/4144/5053682635_b348b24698.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm3.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm7.staticflickr.com/6217/6216951796_e50778255c.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div>
+                        <img src="https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm7.staticflickr.com/6092/6227418584_d5883b0948.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm8.staticflickr.com/7187/6895047173_d4b1a0d798.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm4.staticflickr.com/3766/12953056854_b8cdf14f21.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm7.staticflickr.com/6139/5986939269_10721b8017.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm4.staticflickr.com/3165/5733278274_2626612c70.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li class="pusher"></li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm8.staticflickr.com/7163/6822904141_50277565c3.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm4.staticflickr.com/3771/13199704015_72aa535bd7.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="https://farm8.staticflickr.com/7187/6895047173_d4b1a0d798.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+                <li class="pusher"></li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                        <img src="https://farm3.staticflickr.com/2878/10944255073_973d2cd25c.jpg" alt="" />
+                        <h1>This is a title</h1>
+                        <p>Some sample text about the article this hexagon leads to</p>
+                    </div>
+                </li>
+            </ul>
+            <a id="fork" target="_blank" href="https://github.com/web-tiki/responsive-grid-of-hexagons">Fork on
+                GitHub</a>
+
         </article>
     </section>
     <aside>
@@ -65,12 +196,14 @@
         <h3>Design and develop by: Alex Urueña</h3>
         <br>
 
-        <ul>
-            <li><a href="https://www.instagram.com/alexxball_/"><i class="fa-brands fa-instagram instagram"></i></a>
+        <ul id="footerul">
+            <li id="footerli"><a href="https://www.instagram.com/alexxball_/"><i
+                        class="fa-brands fa-instagram instagram"></i></a>
             </li>
-            <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
+            <li id="footerli"><a href="https://api.whatsapp.com/send?phone=34645783088"><i
                         class="fa-brands fa-whatsapp whatsapp"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/alexurumart/"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li id="footerli"><a href="https://www.linkedin.com/in/alexurumart/"><i
+                        class="fa-brands fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
