--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/hoja_de_estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,700,800'
+        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,300,200,100,900' rel='stylesheet'
+        type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -66,15 +71,16 @@
                 <br><input type="password" name="nombre" size="15" maxlength="9"><br><br>
 
                 <label for="domain" style="margin-left:15% ;">Choose a domain:</label><br>
-                <input type="text" name="e-mail" size="30" maxlength="50" placeholder="E-mail:" title="Tu correo electrónico">
-                    <select id="domain" name="domain">
-                        <option value="hotmail.es">hotmail.es</option>
-                        <option value="hotmail.com">hotmail.com</option>
-                        <option value="yahoo">yahoo.es</option>
-                        <option value="gmail">gmail.com</option>
-                    </select>
-                                    
-                    <br><br>
+                <input type="text" name="e-mail" size="30" maxlength="50" placeholder="E-mail:"
+                    title="Tu correo electrónico">
+                <select id="domain" name="domain">
+                    <option value="hotmail.es">hotmail.es</option>
+                    <option value="hotmail.com">hotmail.com</option>
+                    <option value="yahoo">yahoo.es</option>
+                    <option value="gmail">gmail.com</option>
+                </select>
+
+                <br><br>
                 <input type="checkbox" name="check" checked=""> Subscribe to the news<br>
 
 
@@ -89,7 +95,7 @@
                 <input type="radio" id="VIP_Camping" name="fav_language" value="VIP_Camping">
                 <label for="VIP_Camping">VIP + Camping</label><br><br>
 
-                Include your 
+                Include your
                 <input type="file" name="examinar"><br><br>
                 <a href="multimedia/fotos/no.png" alt="Buy tickets"><button>Buy your tickets</button></a>
                 <input type="reset" name="reset" value="Delete entered data">
@@ -104,12 +110,14 @@
         <h3>Design and develop by: Alex Urueña</h3>
         <br>
 
-        <ul>
-            <li><a href="https://www.instagram.com/alexxball_/"><i class="fa-brands fa-instagram instagram"></i></a>
+        <ul id="footerul">
+            <li id="footerli"><a href="https://www.instagram.com/alexxball_/"><i
+                        class="fa-brands fa-instagram instagram"></i></a>
             </li>
-            <li><a href="https://api.whatsapp.com/send?phone=34645783088"><i
+            <li id="footerli"><a href="https://api.whatsapp.com/send?phone=34645783088"><i
                         class="fa-brands fa-whatsapp whatsapp"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/alexurumart/"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li id="footerli"><a href="https://www.linkedin.com/in/alexurumart/"><i
+                        class="fa-brands fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
