--- a/photo.html
+++ b/photo.html
@@ -18,6 +18,8 @@
 
 <body>
     <header>
+        <a id="fork" target="_blank" href="https://github.com/AlexxKai/Kai">Fork on
+            GitHub</a>
 
         <nav>
             <div class="navbar">
@@ -182,9 +184,6 @@
                     </div>
                 </li>
             </ul>
-            <a id="fork" target="_blank" href="https://github.com/web-tiki/responsive-grid-of-hexagons">Fork on
-                GitHub</a>
-
         </article>
     </section>
     <aside>
