--- a/deliver.html
+++ b/deliver.html
@@ -18,7 +18,8 @@
 
 <body>
     <header>
-
+        <a id="fork" target="_blank" href="https://github.com/AlexxKai/Kai">Fork on
+            GitHub</a>
         <nav>
             <div class="navbar">
                 <a href="./index.html">Home</a>
