--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,300,200,100,900' rel='stylesheet'
         type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/x-icon" href="./img/fantasma.png">
 </head>
 
 <body>
