--- a/contact.html
+++ b/contact.html
@@ -49,17 +49,15 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div style="padding:0 16px">
-                <h3>Jaja nice</h3>
-                <p>Here</p>
-            </div>
-
         </nav>
     </header>
 
-
     <section>
+        <article id="text">
+            <h2>Jaja nice</h2>
+            <p>Here</p>
+        </article>
+    
         <article>
             <form>
                 <p>
@@ -104,9 +102,6 @@
             </form>
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <h3>Design and develop by: Alex Urueña</h3>
