--- a/me.html
+++ b/me.html
@@ -49,24 +49,21 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div>
-
-            </div>
-
         </nav>
     </header>
 
 
     <section>
-        <article>
+        <article id="text">
+            <h2>Alex Martin Urueña</h2>
             <p>The creator of the page.</p>
             <img src="./img/alex.jpg" width="10%" height="50%" alt="Alex Urueña" id="noeimg">
         </article>
-    </section>
-    <aside>
 
-    </aside>
+        <article>
+
+        </article>
+    </section>
 
     <footer>
         <h3>Design and develop by: Alex Urueña</h3>
