--- a/index.html
+++ b/index.html
@@ -49,24 +49,19 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div style="padding:0 16px">
-                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Here</p>
-            </div>
-
         </nav>
     </header>
 
 
     <section>
+        <article id="text">
+            <h2>INICIO</h2>
+        </article>
+
         <article>
-            <p>INICIO</p>
+
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <h3>Design and develop by: Alex Urueña</h3>
