--- a/literature.html
+++ b/literature.html
@@ -49,24 +49,19 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div style="padding:0 16px">
-                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
-            </div>
-
         </nav>
     </header>
 
-
     <section>
+        <article id="text">
+            <h2>LITERATURE</h2>
+            <p>In this section we can see a selection of writing.</p>
+        </article>
+
         <article>
-            <p>ESCRITOS</p>
+
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <h3>Design and develop by: Alex Urueña</h3>
