--- a/marta.html
+++ b/marta.html
@@ -49,25 +49,21 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div>
-
-            </div>
-
         </nav>
     </header>
 
 
     <section>
-        <article>
-            <p>One of our partners is Marta Francés Pintado</p>
+        <article id="text">
+            <h2>Marta Francés Pintado</h2>
+            <p>One of our partners.</p>
             <img src="./img/marta2.jpg" width="10%" height="50%" alt="Marta Francés Pintado" id="noeimg">
+        </article>
+
+        <article>
 
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <ul id="footerul">
