--- a/noelia.html
+++ b/noelia.html
@@ -49,25 +49,20 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div>
-
-            </div>
-
         </nav>
     </header>
 
-
     <section>
-        <article>
-            <p>One of our partners is Noelia Otazo Rojo</p>
+        <article id="text">
+            <h2>Noelia Otazo Rojo</h2>
+            <p>One of our partners.</p>
             <img src="./img/noe.jpg" width="10%" height="50%" alt="Noelia Otazo Rojo" id="noeimg">
+        </article>
+
+        <article>
 
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <ul id="footerul">
