--- a/photo.html
+++ b/photo.html
@@ -21,7 +21,6 @@
     <header>
         <a id="fork" target="_blank" href="https://github.com/AlexxKai/Kai">Fork on
             GitHub</a>
-
         <nav>
             <div class="navbar">
                 <a href="./index.html">Home</a>
@@ -50,17 +49,15 @@
                 </div>
                 <a href="./contact.html">Contact</a>
             </div>
-
-            <div style="padding:0 16px">
-                <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
-                <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
-            </div>
-
         </nav>
     </header>
 
+    <section id="text">
+        <article>
+            <h2>GALLERY</h2>
+            <p>In this section we can see a selection of photos.</p>
+        </article>
 
-    <section>
         <article>
             <ul id="categories" class="clr">
                 <li class="pusher"></li>
@@ -187,9 +184,6 @@
             </ul>
         </article>
     </section>
-    <aside>
-
-    </aside>
 
     <footer>
         <h3>Design and develop by: Alex Urueña</h3>
