--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,10 @@
             <h2>Jaja nice</h2>
             <p>Here</p>
         </article>
+
+        <article>
+            
+        </article>
     
         <article>
             <form>
