--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <header>
         <a id="fork" target="_blank" href="https://github.com/AlexxKai/Kai">Fork on
             GitHub</a>
+        <a id="login" target="_blank" href="./login.html">Login</a>
         <nav>
             <div class="navbar">
                 <a href="./index.html">Home</a>
@@ -55,7 +56,7 @@
 
     <section>
         <article id="text">
-            <h2>INICIO</h2>
+            <h2>HOME</h2>
         </article>
 
         <article>
