--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
     <header>
         <a id="fork" target="_blank" href="https://github.com/AlexxKai/Kai">Fork on
             GitHub</a>
+        <a id="login" target="_blank" href="./login.html">Login</a>
+        <a id="register" target="_blank" href="./register.html">Register</a>
+
         <nav>
             <div class="navbar">
                 <a href="./index.html">Home</a>
@@ -28,7 +31,7 @@
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a href="./art.html">Art</a>
-                        <a href="./literature.html">Literature</a>
+                        <a href="./code.html">Code</a>
                         <a href="./photo.html">Photo</a>
                     </div>
                 </div>
@@ -59,9 +62,9 @@
         </article>
 
         <article>
-            
+
         </article>
-    
+
         <article>
             <form>
                 <p>
