--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 
         <nav>
             <div>
-                
+
             </div>
         </nav>
     </header>
@@ -34,29 +34,29 @@
             <div class="login-box">
                 <h2>Login</h2>
                 <form>
-                  <div class="user-box">
-                    <input type="text" name="" required="">
-                    <label>Username</label>
-                  </div>
-                  <div class="user-box">
-                    <input type="password" name="" required="">
-                    <label>Password</label>
-                  </div>
-                  <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Access
-                  </a>
+                    <div class="user-box">
+                        <input type="text" name="" required="">
+                        <label>Username</label>
+                    </div>
+                    <div class="user-box">
+                        <input type="password" name="" required="">
+                        <label>Password</label>
+                    </div>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Register
+                    </a>
                 </form>
-              </div>
+            </div>
         </article>
 
     </section>
 
     <footer>
-    
+
     </footer>
 </body>
 
