--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
     <section>
         <article id="text">
             <h2>HOME</h2>
+        <p>This site is a compilation of materials from different fields.</p>
         </article>
-
+        
         <article>
-
+            
         </article>
     </section>
 
