--- a/login.html
+++ b/login.html
@@ -19,7 +19,8 @@
 
 <body>
     <header>
-        <a id="return" target="_blank" href="./index.html">Home</a>
+        <a id="home" target="_blank" href="./index.html">Home</a>
+        <a id="register" target="_blank" href="./register.html">Register</a>
 
         <nav>
             <div>
