--- a/register.html
+++ b/register.html
@@ -19,7 +19,8 @@
 
 <body>
     <header>
-        <a id="return" target="_blank" href="./index.html">Home</a>
+        <a id="home" target="_blank" href="./index.html">Home</a>
+        <a id="login" target="_blank" href="./login.html">Login</a>
 
         <nav>
             <div>
@@ -32,8 +33,13 @@
     <section>
         <article id="text">
             <div class="login-box">
-                <h2>Login</h2>
+                <h2>Register</h2>
                 <form>
+                    <div>
+                        
+                      </div>
+                    <hr>
+                    <br>
                     <div class="user-box">
                         <input type="text" name="" required="">
                         <label>Username</label>
@@ -41,6 +47,19 @@
                     <div class="user-box">
                         <input type="password" name="" required="">
                         <label>Password</label>
+                    </div>
+                    <div class="user-box">
+                        <input type="email" name="" required="">
+                        <label>Email</label>
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
                     </div>
                     <a href="#">
                         <span></span>
