--- a/code.html
+++ b/code.html
@@ -62,7 +62,12 @@
         </article>
 
         <article>
-
+            <figure class="kg-card kg-embed-card kg-card-hascaption"><iframe id="cp_embed_XWNyGBR"
+                    src="https://codepen.io/jessica-wilkins/embed/preview/XWNyGBR?height=300&amp;slug-hash=XWNyGBR&amp;default-tabs=css,result&amp;host=https://codepen.io"
+                    title="Contenido incrustado" scrolling="no" allowtransparency="true" class="cp_embed_iframe"
+                    style="width: 100%; overflow: hidden;" height="300" frameborder="0" loading="lazy"></iframe>
+                <figcaption>Muestra en CodePen</figcaption>
+            </figure>
         </article>
     </section>
 
