--- a/code.html
+++ b/code.html
@@ -30,7 +30,6 @@
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="./art.html">Art</a>
                         <a href="./code.html">Code</a>
                         <a href="./photo.html">Photo</a>
                     </div>
@@ -39,7 +38,6 @@
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a href="./questions.html">Questions</a>
-                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
@@ -50,23 +48,75 @@
                         <a href="./marta.html">Marta</a>
                     </div>
                 </div>
-                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
 
     <section>
         <article id="text">
-            <h2>CODE</h2>
             <p>In this section we can see a selection of code.</p>
         </article>
 
+        <article id="code">
+            <p>C</p>
+            <p>O</p>
+            <p>D</p>
+            <p>E</p>
+        </article>
+
         <article>
-            <figure class="kg-card kg-embed-card kg-card-hascaption"><iframe id="cp_embed_XWNyGBR"
-                    src="https://codepen.io/jessica-wilkins/embed/preview/XWNyGBR?height=300&amp;slug-hash=XWNyGBR&amp;default-tabs=css,result&amp;host=https://codepen.io"
-                    title="Contenido incrustado" scrolling="no" allowtransparency="true" class="cp_embed_iframe"
-                    style="width: 100%; overflow: hidden;" height="300" frameborder="0" loading="lazy"></iframe>
-                <figcaption>Muestra en CodePen</figcaption>
+            <figure id="fig1">
+                <iframe
+                    src="https://codesandbox.io/embed/animated-input-8idzfc?autoresize=1&fontsize=20&hidenavigation=1&moduleview=1&theme=dark&view=preview"
+                    style="width:40%; height:300px; border:0; border-radius: 4px; overflow:hidden;"
+                    title="Animated input"
+                    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+                    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+                <figcaption>Animated input</figcaption>
+            </figure>
+        </article>
+        <article>
+            <figure id="fig2">
+                <iframe
+                    src="https://codesandbox.io/embed/button-uufnis?autoresize=1&fontsize=20&hidenavigation=1&moduleview=1&theme=dark&view=preview"
+                    style="width:40%; height:300px; border:0; border-radius: 4px; overflow:hidden;" title="Button"
+                    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+                    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+                <figcaption>Button</figcaption>
+            </figure>
+        </article>
+
+        <article>
+            <figure id="fig3">
+                <iframe
+                    src="https://codesandbox.io/embed/hover-effects-fslmfb?autoresize=1&fontsize=20&hidenavigation=1&moduleview=1&theme=dark&view=preview"
+                    style="width:40%; height:300px; border:0; border-radius: 4px; overflow:hidden;"
+                    title="Hover Effects"
+                    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+                    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+                <figcaption>Hover effect</figcaption>
+            </figure>
+        </article>
+        <article>
+            <figure id="fig4">
+                <iframe
+                    src="https://codesandbox.io/embed/profile-picture-vvku3b?autoresize=1&fontsize=20&hidenavigation=1&moduleview=1&theme=dark&view=preview"
+                    style="width:40%; height:300px; border:0; border-radius: 4px; overflow:hidden;"
+                    title="Profile picture"
+                    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+                    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+                <figcaption>Profile picture</figcaption>
+            </figure>
+        </article>
+        <article>
+            <figure id="fig5">
+                <iframe
+                    src="https://codesandbox.io/embed/responsive-grid-wo2465?autoresize=1&fontsize=20&hidenavigation=1&moduleview=1&theme=dark&view=preview"
+                    style="width:40%; height:300px; border:0; border-radius: 4px; overflow:hidden;"
+                    title="Responsive grid"
+                    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+                    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+                <figcaption>Text with gradient color</figcaption>
             </figure>
         </article>
     </section>
