--- a/marta.html
+++ b/marta.html
@@ -30,7 +30,6 @@
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="./art.html">Art</a>
                         <a href="./code.html">Code</a>
                         <a href="./photo.html">Photo</a>
                     </div>
@@ -39,7 +38,6 @@
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a href="./questions.html">Questions</a>
-                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
@@ -50,17 +48,19 @@
                         <a href="./marta.html">Marta</a>
                     </div>
                 </div>
-                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
 
 
     <section>
-        <article id="text">
-            <h2>Marta Francés Pintado</h2>
-            <p>One of our partners.</p>
-            <img src="./img/marta2.jpg" width="10%" height="50%" alt="Marta Francés Pintado" id="noeimg">
+        <article id="text" class="size">
+            <div>
+                <h2>Marta Francés Pintado</h2>
+                <p>One of our partners.</p>
+                <img src="./img/marta2.jpg" width="10%" height="50%" alt="Marta Francés Pintado" id="noeimg">
+                <p>Economist.</p>
+            </div>
         </article>
 
         <article>
