--- a/questions.html
+++ b/questions.html
@@ -30,7 +30,6 @@
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="./art.html">Art</a>
                         <a href="./code.html">Code</a>
                         <a href="./photo.html">Photo</a>
                     </div>
@@ -39,7 +38,6 @@
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a href="./questions.html">Questions</a>
-                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
@@ -50,19 +48,31 @@
                         <a href="./marta.html">Marta</a>
                     </div>
                 </div>
-                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
 
     <section>
         <article id="text">
-            <h2>PREGUNTAS</h2>
+            <h2>QUESTIONS</h2>
         </article>
 
         <article>
-
-        </article>
+            <p id="question">Do you do collaborations?</p>
+            <p id="response">Yes, I do collaborations. The popularity of the artist is not taken into account, only that I like the content.</p>
+        </article><br>
+        <article>
+            <p id="question">When you travel, do you go with expenses paid?</p>
+            <p id="response">No, in all the trips I choose the destination, the routes or visits that I want to do and all the expenses are borne by me.</p>
+        </article><br>
+        <article>
+            <p id="question">Can you buy me a beer?</p>
+            <p id="response">Yes.</p>
+        </article><br>
+        <article class="size2">
+            <p id="question">Are you going to buy Christmas lottery?</p>
+            <p id="response">Nope.</p>
+        </article><br>
     </section>
 
     <footer>
