--- a/noelia.html
+++ b/noelia.html
@@ -30,7 +30,6 @@
                 <div class="subnav">
                     <button class="subnavbtn">Gallery <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a href="./art.html">Art</a>
                         <a href="./code.html">Code</a>
                         <a href="./photo.html">Photo</a>
                     </div>
@@ -39,7 +38,6 @@
                     <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a href="./questions.html">Questions</a>
-                        <a href="./deliver.html">Deliver</a>
                     </div>
                 </div>
                 <div class="subnav">
@@ -50,16 +48,18 @@
                         <a href="./marta.html">Marta</a>
                     </div>
                 </div>
-                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
 
     <section>
-        <article id="text">
+        <article id="text" class="size">
+            <div>
             <h2>Noelia Otazo Rojo</h2>
             <p>One of our partners.</p>
             <img src="./img/noe.jpg" width="10%" height="50%" alt="Noelia Otazo Rojo" id="noeimg">
+            <p>Systems technician.</p>
+            </div>
         </article>
 
         <article>
